package UserManagent;


public abstract class UserDAO {

    public abstract User getUserById(String id);

}
